add more default JAVA_OPTS in entrypoint.sh